--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Galeria Familiar</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/img10.jpeg">
 </head>
 <body>
     <h2 class="header">Pequeños momentos...</h2>
